--- a/alzheimer_analysis_pre.ipynb
+++ b/alzheimer_analysis_pre.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop PatientId and DoctorInCharge\n",
+    "\n",
+    "alzheimer_df = alzheimer_df.drop(columns = [\"PatientID\", \"DoctorInCharge\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                          2149\n",
+       "Gender                       2149\n",
+       "Ethnicity                    2149\n",
+       "EducationLevel               2149\n",
+       "BMI                          2149\n",
+       "Smoking                      2149\n",
+       "AlcoholConsumption           2149\n",
+       "PhysicalActivity             2149\n",
+       "DietQuality                  2149\n",
+       "SleepQuality                 2149\n",
+       "FamilyHistoryAlzheimers      2149\n",
+       "CardiovascularDisease        2149\n",
+       "Diabetes                     2149\n",
+       "Depression                   2149\n",
+       "HeadInjury                   2149\n",
+       "Hypertension                 2149\n",
+       "SystolicBP                   2149\n",
+       "DiastolicBP                  2149\n",
+       "CholesterolTotal             2149\n",
+       "CholesterolLDL               2149\n",
+       "CholesterolHDL               2149\n",
+       "CholesterolTriglycerides     2149\n",
+       "MMSE                         2149\n",
+       "FunctionalAssessment         2149\n",
+       "MemoryComplaints             2149\n",
+       "BehavioralProblems           2149\n",
+       "ADL                          2149\n",
+       "Confusion                    2149\n",
+       "Disorientation               2149\n",
+       "PersonalityChanges           2149\n",
+       "DifficultyCompletingTasks    2149\n",
+       "Forgetfulness                2149\n",
+       "Diagnosis                    2149\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alzheimer_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Ethnicity</th>\n",
+       "      <th>EducationLevel</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoking</th>\n",
+       "      <th>AlcoholConsumption</th>\n",
+       "      <th>PhysicalActivity</th>\n",
+       "      <th>DietQuality</th>\n",
+       "      <th>SleepQuality</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FunctionalAssessment</th>\n",
+       "      <th>MemoryComplaints</th>\n",
+       "      <th>BehavioralProblems</th>\n",
+       "      <th>ADL</th>\n",
+       "      <th>Confusion</th>\n",
+       "      <th>Disorientation</th>\n",
+       "      <th>PersonalityChanges</th>\n",
+       "      <th>DifficultyCompletingTasks</th>\n",
+       "      <th>Forgetfulness</th>\n",
+       "      <th>Diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22.927749</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.297218</td>\n",
+       "      <td>6.327112</td>\n",
+       "      <td>1.347214</td>\n",
+       "      <td>9.025679</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.518877</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.725883</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>89</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.827681</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.542524</td>\n",
+       "      <td>7.619885</td>\n",
+       "      <td>0.518767</td>\n",
+       "      <td>7.151293</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.118696</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.592424</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17.795882</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19.555085</td>\n",
+       "      <td>7.844988</td>\n",
+       "      <td>1.826335</td>\n",
+       "      <td>9.673574</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.895077</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.119548</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>74</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.800817</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.209266</td>\n",
+       "      <td>8.428001</td>\n",
+       "      <td>7.435604</td>\n",
+       "      <td>8.392554</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.965106</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.481226</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>89</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.716974</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18.454356</td>\n",
+       "      <td>6.310461</td>\n",
+       "      <td>0.795498</td>\n",
+       "      <td>5.597238</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.045039</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.014691</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Gender  Ethnicity  EducationLevel        BMI  Smoking  \\\n",
+       "0   73       0          0               2  22.927749        0   \n",
+       "1   89       0          0               0  26.827681        0   \n",
+       "2   73       0          3               1  17.795882        0   \n",
+       "3   74       1          0               1  33.800817        1   \n",
+       "4   89       0          0               0  20.716974        0   \n",
+       "\n",
+       "   AlcoholConsumption  PhysicalActivity  DietQuality  SleepQuality  ...  \\\n",
+       "0           13.297218          6.327112     1.347214      9.025679  ...   \n",
+       "1            4.542524          7.619885     0.518767      7.151293  ...   \n",
+       "2           19.555085          7.844988     1.826335      9.673574  ...   \n",
+       "3           12.209266          8.428001     7.435604      8.392554  ...   \n",
+       "4           18.454356          6.310461     0.795498      5.597238  ...   \n",
+       "\n",
+       "   FunctionalAssessment  MemoryComplaints  BehavioralProblems       ADL  \\\n",
+       "0              6.518877                 0                   0  1.725883   \n",
+       "1              7.118696                 0                   0  2.592424   \n",
+       "2              5.895077                 0                   0  7.119548   \n",
+       "3              8.965106                 0                   1  6.481226   \n",
+       "4              6.045039                 0                   0  0.014691   \n",
+       "\n",
+       "   Confusion  Disorientation  PersonalityChanges  DifficultyCompletingTasks  \\\n",
+       "0          0               0                   0                          1   \n",
+       "1          0               0                   0                          0   \n",
+       "2          0               1                   0                          1   \n",
+       "3          0               0                   0                          0   \n",
+       "4          0               0                   1                          1   \n",
+       "\n",
+       "   Forgetfulness  Diagnosis  \n",
+       "0              0          0  \n",
+       "1              1          0  \n",
+       "2              0          0  \n",
+       "3              0          0  \n",
+       "4              0          0  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alzheimer_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
