adding supervised learning files

--- a/alzheimer_analysis_SACD.ipynb
+++ b/alzheimer_analysis_SACD.ipynb
@@ -572,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alzheimer_df.to_csv('alzheimer_clean', index=False)"
+    "alzheimer_df.to_csv('alzheimer_clean.csv', index=False)"
    ]
   },
   {
