--- a/alzheimer_analysis_EDA_Visual.ipynb
+++ b/alzheimer_analysis_EDA_Visual.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yi\\AppData\\Local\\Temp\\ipykernel_1188\\1769593214.py:15: UserWarning: \n",
+      "The dash_core_components package is deprecated. Please replace\n",
+      "`import dash_core_components as dcc` with `from dash import dcc`\n",
+      "  import dash_core_components as dcc\n",
+      "C:\\Users\\Yi\\AppData\\Local\\Temp\\ipykernel_1188\\1769593214.py:16: UserWarning: \n",
+      "The dash_html_components package is deprecated. Please replace\n",
+      "`import dash_html_components as html` with `from dash import html`\n",
+      "  import dash_html_components as html\n"
+     ]
+    }
+   ],
    "source": [
     "# import dependencies\n",
     "import numpy as np\n",
@@ -31,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +258,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +319,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +737,7 @@
        "[2149 rows x 34 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +793,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +968,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1123,7 @@
        "[2149 rows x 5 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1295,7 @@
        "[2149 rows x 5 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1627,7 @@
        "4   -0.072156   64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1664,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x23e71d70f40>"
+       "<IPython.lib.display.IFrame at 0x21c970b2e60>"
       ]
      },
      "metadata": {},
@@ -1688,7 +1703,7 @@
     "        title=f'Ratio Comparison for Age {selected_age}',\n",
     "        yaxis=dict(title='Ratio Difference', range=[ratio_diff_df['Difference'].min(), ratio_diff_df['Difference'].max()]),\n",
     "        height=400,\n",
-    "        width=290\n",
+    "        width=270\n",
     "    )\n",
     "    \n",
     "    return {'data': [trace], 'layout': layout}\n",
@@ -1699,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1816,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1943,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1940,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2064,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2130,7 +2145,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2142,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2166,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2191,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2264,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2290,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2349,7 +2364,7 @@
        "Higher             -0.010958"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2500,7 +2515,7 @@
        "4              6.045039                 0                   0  0.014691  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2514,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
