file path update

--- a/Alzheimer_Demographic_MLS.ipynb
+++ b/Alzheimer_Demographic_MLS.ipynb
@@ -250,7 +250,7 @@
    ],
    "source": [
     "# Create a DataFrame for the healthcare-dataset-stroke-data.csv. \n",
-    "file_path = Path(\"Resources/alzheimers_disease_data.csv\")\n",
+    "file_path = Path(\"alzheimers_disease_data.csv\")\n",
     "alzheimer_df = pd.read_csv(file_path)\n",
     "alzheimer_df.head()"
    ]
